# P1RV

./: CMakeLists.txt  P1RV.sln  P1RV.vcxproj  P1RV.vcxproj.filters  README.md  main.cpp
Debug/: vc142.idb
Debug/P1RV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  P1RV.lastbuildstate  link.31208.delete.1.tlog  link.6140.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Sources/: Material.cpp  Material.h  callback.cpp  callback.h  camera.cpp  camera.h  createmap.cpp  createmap.h  display.cpp  display.h  interface.cpp  interface.h  loadjpeg.cpp  loadjpeg.h  material.cpp  mydisplay.cpp  mydisplay.h  mymainwindow.cpp  mymainwindow.h  mywindow.cpp  mywindow.h  pixel.cpp  pixel.h  shader.cpp  shader.h  vertex.cpp  vertex.h
Sources/shader/: shader.vert
src/: camera.cpp  camera.h  createmap.cpp  createmap.h  interface.cpp  interface.h  loadjpeg.cpp  loadjpeg.h  material.cpp  material.h  mycanvas.cpp  mycanvas.h  mymainwindow.cpp  mymainwindow.h  mywindow.cpp  mywindow.h  pixel.h  vertex.cpp
x64/Debug/: vc142.idb
x64/Debug/P1RV.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  P1RV.lastbuildstate
